slurm/k8s/base/base/1.kube-basics-lecture/1.9.ingress/ingress-nginx/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo
  name: demo
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: demo
  type: ClusterIP
status:
  loadBalancer: {}
